Show client promo GFX when limit is about to exceed. Several other fine tunings

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1520,7 +1520,7 @@ wizard.choose_disk_location.total_directory_size=Total size: {0} Files: {1}
 wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.send_invitation=Send invitation
-wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
+wizard.choose_disk_location.os_over_size=Maximum amount of data exceeded. Upgrade recommended.
 wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.local_base.title=Base directory
