--- a/build.xml
+++ b/build.xml
@@ -218,7 +218,7 @@ For creation of the installer:
 	</target>
 	
 	<target name="deploy-integration-jar" depends="jar-unsigned">
-		<echo message="Deployment password = ${env.DEPLOYMENT_PASSWORD}"/>
+		<echo message="Sending Integration JAR file to web server"/>
 	    <scp file="${dist.dir}/PowerFolder.jar" todir="powerfolder-dev:${env.DEPLOYMENT_PASSWORD}@kobol.powerfolder.com:~/bamboo" port="60000" trust="true" verbose="true" sftp="true"/>
 	</target>
 
