--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -694,8 +694,8 @@ exp_folder_view.expand=Expand folder details
 exp_folder_view.deleted_files=Deleted files: {0}
 exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} available
-exp_folder_view.folder_local_text=Local folder
-exp_folder_view.folder_online_text=Non-local folder
+exp_folder_view.folder_local_text=On this computer
+exp_folder_view.folder_online_text=Available folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0} ({1} connected)
@@ -797,8 +797,8 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 
 folder.info_tip=Contains files and folders managed by {APPNAME}
 
-folders_list.local_folders=Local folders
-folders_list.online_folders=Non-local folders
+folders_list.local_folders=On this computer
+folders_list.online_folders=Available folders
 folders_list.collapse_hint=Collapse group
 folders_list.expand_hint=Expand group
 
