--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1660,13 +1660,12 @@ wizard.what_to_do.synchronized_folder=Sync files
 wizard.what_to_do.title=What do you want to do?
 
 wizard.tell_friend.title=Tell someone about {APPNAME}
-wizard.tell_friend.information1=Send emails inviting people to use {APPNAME}.
-wizard.tell_friend.information2=
 wizard.tell_friend.add_email_address=Please enter the email addresses (one per line)
 wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
 wizard.tell_friend.title.warning_title=Invalid email address
 wizard.tell_friend.title.warning_bad_email='{0}' is not a valid email address
 wizard.tell_friend.success=Emails have been sent to the recipients.
+wizard.tell_friend.sending=Sending
 
 wizard.multi_online_storage_setup.local_folder_location=Local directory
 wizard.multi_online_storage_setup.select_directory=Select directory
