--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1447,6 +1447,7 @@ transfers.queued=Queued
 transfers.remote_hashing=Preparing
 transfers.requested=Requested
 transfers.searching=Searching...
+transfers.started=Started
 transfers.swarm=Multi: {0} sources
 transfers.to=To
 transfers.verifying=Checking
