Bold, italic and underline chat,refs #1476

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -51,6 +51,18 @@ action_activate_notice.description=Activate the selected notice
 action_activate_notice.key=A
 action_activate_notice.name=Activate
 
+action_bold.description=Bold text
+action_bold.key=B
+action_bold.name=Bold
+
+action_italic.description=Italic text
+action_italic.key=I
+action_italic.name=Italic
+
+action_underline.description=Underline text
+action_underline.key=U
+action_underline.name=Underline
+
 action_cleanup_notices.description=Clear the list of notices
 action_cleanup_notices.key=C
 action_cleanup_notices.name=Cleanup
