Select and paste chat input,fixes #1476

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -227,6 +227,10 @@ action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
+action_paste.description=Paste text
+action_paste.key=P
+action_paste.name=Paste
+
 action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=C
 action_reconnect.name=Reconnect
