Chat typing advice, fixes #1575

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -549,7 +549,7 @@ chat_panel.member_joined_folder_at_time={0} joined folder {1} at {2}
 chat_panel.member_left_folder_at_time={0} left folder {1} at {2}
 chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
 chat_panel.close_button.tool_tip=Close chat session with {0}
-
+chat_panel.chat_advice.text={0} is typing...
 check_status.in_sync_all=All Folders are in sync
 check_status.powerfolders={0} in {1} folder(s)
 check_status.syncing=Syncing {0} folder(s)
