--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -680,9 +680,8 @@ dialog.update_check.title=Newer version available
 debug_information_card.title=Debug
 
 downloads_information_card.title=Downloads
-downloads_information_card.auto_cleanup.name=Auto-cleanup
-downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
 downloads_information_card.auto_cleanup.immediate=Immediate
+downloads_information_card.auto_cleanup.never=Never
 downloads_information_card.auto_cleanup.days={0} day(s)
 downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 
