--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -335,6 +335,7 @@ transfer_mode.backup_source.name=Backup source
 transfer_mode.backup_source_5min.name=Backup source (5 minutes)
 transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_target.name=Backup target
+transfer_mode.backup_target_no_change.name=Cloud backup
 transfer_mode.custom.name=Custom profile
 transfer_mode.disabled.name=Disabled
 transfer_mode.host_files.name=Share/Send
