Local directory for expandable folder view, fixes #2118.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -721,6 +721,7 @@ exp_folder_view.unsynchronized=Not in sync
 exp_folder_view.unsynchronized.tip=There are no connected folder members
 exp_folder_view.synchronized=Sync {0}%
 exp_folder_view.transfer_mode=Transfer mode: {0}
+exp_folder_view.local_directory=Local directory: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
 exp_folder_view.not_yet_scanned=Not yet scanned
