Renamed PRO SETTINGS to Plugins

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1249,7 +1249,7 @@ preferences.dialog.plugin.name=Name
 preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Disabled
 preferences.dialog.plugin.status_enabled=Enabled
-preferences.dialog.plugin.title=Pro Settings
+preferences.dialog.plugin.title=Plugins
 preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
 preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.restart.restart=Restart Now
