Local mass delete notice, fixes #2115

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1469,10 +1469,11 @@ transfers.swarm=Multi: {0} sources
 transfers.to=To
 transfers.verifying=Checking
 
-uicontroller.local_mass_delete.title=All files deleted
-uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
+local_delete_notice.title=All files deleted
+local_delete_notice.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
+local_delete_notice.broadcast_deletions=Broadcast deletions
+local_delete_notice.remove_folder_locally=Remove folder locally
+
 uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
