--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1427,6 +1427,7 @@ systray.hide=Hide
 systray.powerfolder={APPNAME} v{0}
 systray.show=Show
 systray.sync_all=Sync Folders
+systray.sync_shutdown=Sync and Shutdown
 systray.notifications=Notifications
 systray.notifications.chat=Show Chat Notifications
 systray.notifications.system=Show System Notifications
