Local directory improvements, fixes #2118

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -55,6 +55,10 @@ action_bold.description=Bold text
 action_bold.key=B
 action_bold.name=Bold
 
+action_move_local_folder.description=Move folder location
+action_move_local_folder.key=M
+action_move_local_folder.name=Move
+
 action_italic.description=Italic text
 action_italic.key=I
 action_italic.name=Italic
@@ -721,7 +725,6 @@ exp_folder_view.unsynchronized=Not in sync
 exp_folder_view.unsynchronized.tip=There are no connected folder members
 exp_folder_view.synchronized=Sync {0}%
 exp_folder_view.transfer_mode=Transfer mode: {0}
-exp_folder_view.local_directory=Local directory: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
 exp_folder_view.not_yet_scanned=Not yet scanned
@@ -1354,8 +1357,8 @@ settings_tab.folder_not_empty.title=Folder not empty
 settings_tab.folder_not_empty=Folder {0} is not empty.
 settings_tab.ignore_patterns=Ignore patterns
 settings_tab.local_folder_location=Local directory
-settings_tab.move_content.dont=Do Not Move Contents
-settings_tab.move_content.move=Move Contents
+settings_tab.move_content.dont=Do Not Move
+settings_tab.move_content.move=Move
 settings_tab.move_content.title=Move folder contents
 settings_tab.move_content=Also move current folder contents?
 settings_tab.move_error.other=There was an error moving the folder\:\n{0}
