Linux shutdown command, fixes #656

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1381,6 +1381,10 @@ settings_tab.purge_archive_title=Purge archive
 settings_tab.purge_archive_message=Purge the entire folder archive?
 settings_tab.purge_archive_problem=Sorry, the archive could not be purged.
 
+shutdown.message=Password is required for shutdown.
+shutdown.prompt=Password:
+shutdown.title=Shutdown
+
 skin.black_moon=Black Moon
 skin.black_star=Black Star
 skin.blue_ice=Blue Ice
