Clarify password, refs #656

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1381,7 +1381,7 @@ settings_tab.purge_archive_title=Purge archive
 settings_tab.purge_archive_message=Purge the entire folder archive?
 settings_tab.purge_archive_problem=Sorry, the archive could not be purged.
 
-shutdown.message=Password is required for shutdown.
+shutdown.message=Unix password is required for shutdown.
 shutdown.prompt=Password:
 shutdown.title=Shutdown
 
