--- a/src/distribution/PowerFolderBasic/Default.config
+++ b/src/distribution/PowerFolderBasic/Default.config
@@ -1,4 +1,17 @@
+#
+# The URLs from within the program
+#
+
+pref.skin.name=Snowland (Basic)
+backup.only.client=false
 
 update.version.url=http://checkversion.powerfolder.com/PowerFolder_LatestVersion.txt
 update.download_info.url=http://checkversion.powerfolder.com/PowerFolder_DownloadLocation.txt
 update.windows_exe.url=http://download.powerfolder.com/free/PowerFolder_Latest_Win32_Installer.exe
+
+provider.url.main=http://www.powerfolder.com/?utm_source=sourceforge.net&utm_medium=client&utm_campaign=SourceForge.net
+provider.url.about=http://www.powerfolder.com/wiki/Online_Storage?utm_source=sourceforge.net&utm_medium=client&utm_campaign=SourceForge.net
+provider.url.quickstart=http://www.powerfolder.com/quickstart.html?utm_source=sourceforge.net&utm_medium=client&utm_campaign=SourceForge.net
+provider.url.support=http://www.powerfolder.com/support.html?utm_source=sourceforge.net&utm_medium=client&utm_campaign=SourceForge.net
+provider.url.buy=http://www.powerfolder.com/buynow.html?utm_source=sourceforge.net&utm_medium=client&utm_campaign=SourceForge.net
+provider.url.contact=http://www.powerfolder.com/contact.html?utm_source=sourceforge.net&utm_medium=client&utm_campaign=SourceForge.net
