--- a/.classpath
+++ b/.classpath
@@ -42,5 +42,6 @@
 	<classpathentry kind="lib" path="lib/hibernate-annotations.jar"/>
 	<classpathentry kind="lib" path="lib/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate3-strip.jar"/>
+	<classpathentry kind="lib" path="src/distribution/PowerFolderBasic"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
