Charting button, refs #2165

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -223,6 +223,10 @@ action_open_preferences.description=Open the preferences dialog
 action_open_preferences.key=P
 action_open_preferences.name=Preferences
 
+action_open_stats_charts.description=Open the statistics charts
+action_open_stats_charts.key=S
+action_open_stats_charts.name=Stats
+
 action_open_settings_information.description=Open information on settings for this folder
 action_open_settings_information.key=S
 action_open_settings_information.name=Settings
