Stats panel, refs #2165

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1404,6 +1404,8 @@ skin.white_vision=White Vision
 start_tab.welcome_text=Welcome to {APPNAME}
 start_tab.drag_hint=(Drag a folder here to back it up)
 
+stats_information_card.title=Statistics
+
 status.port.tip=Connection port number
 status.port.text=Port: {0}
 status.chat_pending=There are chat messages waiting
