--- a/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
@@ -132,6 +132,7 @@ sort_down.icon=de/dal33t/powerfolder/skin/greendream/icons/SortDown.png
 sort_up.icon=de/dal33t/powerfolder/skin/greendream/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/greendream/icons/Splash.png
 stop.icon=de/dal33t/powerfolder/skin/greendream/icons/Abort.png
+stats.icon=de/dal33t/powerfolder/skin/greendream/icons/Chart.png
 sleep.icon=de/dal33t/powerfolder/skin/greendream/icons/Sleep.png
 action_sync_folder.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
 sync.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
