--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -154,6 +154,7 @@ sort_blank.icon=de/dal33t/powerfolder/skin/lightsky/icons/SortBlank.png
 sort_down.icon=de/dal33t/powerfolder/skin/lightsky/icons/SortDown.png
 sort_up.icon=de/dal33t/powerfolder/skin/lightsky/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/lightsky/icons/Splash.png
+stats.icon=de/dal33t/powerfolder/skin/lightsky/icons/Chart.png
 stop.icon=de/dal33t/powerfolder/skin/lightsky/icons/Abort.png
 sleep.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sleep.png
 sync.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync00.png
