--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -157,6 +157,7 @@ sort_blank.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/SortBlank.png
 sort_down.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/SortDown.png
 sort_up.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Splash.png
+stats.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Chart.png
 stop.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Abort.png
 sleep.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sleep.png
 sync.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync00.png
