--- a/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
@@ -130,6 +130,7 @@ sort_blank.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/SortBlank.png
 sort_down.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/SortDown.png
 sort_up.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Splash.png
+stats.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Chart.png
 stop.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Abort.png
 sleep.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sleep.png
 # For now use default icons
