--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
@@ -151,6 +151,7 @@ sort_blank.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/SortBlank.png
 sort_down.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/SortDown.png
 sort_up.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Splash.png
+stats.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Chart.png
 stop.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Abort.png
 sleep.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sleep.png
 sync.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sync00.png
