More stats panel, refs #2165

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1405,6 +1405,12 @@ start_tab.welcome_text=Welcome to {APPNAME}
 start_tab.drag_hint=(Drag a folder here to back it up)
 
 stats_information_card.title=Statistics
+stats_information_card.used_graph.used_text=Used
+stats_information_card.used_graph.limit_text=Limit
+stats_information_card.used_graph.text=Used
+stats_information_card.used_graph.tip=Displays available and used bandwidth
+stats_information_card.used_graph.x_axis_text=Time
+stats_information_card.used_graph.y_axis_text=Bandwidth
 
 status.port.tip=Connection port number
 status.port.text=Port: {0}
