Translations and average, refs #2165

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1411,6 +1411,18 @@ stats_information_card.used_graph.text=Used
 stats_information_card.used_graph.tip=Displays available and used bandwidth
 stats_information_card.used_graph.x_axis_text=Time
 stats_information_card.used_graph.y_axis_text=Bandwidth
+stats_information_card.wan_upload=WAN upload
+stats_information_card.wan_download=WAN download
+stats_information_card.lan_upload=LAN upload
+stats_information_card.lan_download=LAN download
+stats_information_card.used_and_available=Used and available
+stats_information_card.used_only=Used only
+stats_information_card.available_only=Available only
+stats_information_card.used=Used
+stats_information_card.available=Available
+stats_information_card.average=Average
+stats_information_card.date=Date
+stats_information_card.bandwidth=Bandwidth (KB)
 
 status.port.tip=Connection port number
 status.port.text=Port: {0}
