--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1405,8 +1405,10 @@ start_tab.welcome_text=Welcome to {APPNAME}
 start_tab.drag_hint=(Drag a folder here to back it up)
 
 stats_information_card.title=Statistics
+stats_information_card.percentage_graph.text=Percentage
+stats_information_card.percentage_graph.tip=Displays percentage bandwidth used
 stats_information_card.used_graph.text=Used
-stats_information_card.used_graph.tip=Displays available and used bandwidth
+stats_information_card.used_graph.tip=Displays available and used bandwidth used
 stats_information_card.wan_upload=WAN upload
 stats_information_card.wan_download=WAN download
 stats_information_card.lan_upload=LAN upload
@@ -1419,6 +1421,7 @@ stats_information_card.available=Available
 stats_information_card.average=Average
 stats_information_card.date=Date
 stats_information_card.bandwidth=Bandwidth (KB)
+stats_information_card.percentage=Percentage
 
 status.port.tip=Connection port number
 status.port.text=Port: {0}
