--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,7 @@
 	<classpathentry kind="lib" path="lib/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate3-strip.jar"/>
 	<classpathentry kind="lib" path="src/distribution/PowerFolderBasic"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
