Auto accept CB, refs #2210

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -566,6 +566,7 @@ check_status.title=Status of My Folders
 
 computers_tab.no_computers_available=No computers available
 computers_tab.show_offline=Show offline
+computers_tab.show_offline.tip=Show computers that are currently offline.
 
 connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\n{APPNAME} automatically connects to the network after a short time,\nUse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a computer
@@ -917,6 +918,8 @@ friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
 folders_tab.no_folders_available=No folders available
+folders_tab.auto_accept.text=Auto accept
+folders_tab.auto_accept.tip=Automatically accept invitations to new folders.
 
 friends_panel.connected=Connected
 friends_panel.currently_online=Currently online
