--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -476,8 +476,8 @@ config.loader.dialog.error.address.invalid=Incomplete or invalid address
 config.loader.dialog.error.config.empty=Client configuration file empty
 config.loader.dialog.error.host.notfound=Host not found
 config.loader.dialog.loaded=Loaded {0} settings
-config.loader.dialog.title={APPNAME}: Select storage provider
-config.loader.dialog.info=Please enter the web address of your storage provider:
+config.loader.dialog.title={APPNAME}: Select server
+config.loader.dialog.info=Please enter the address of your server:
 config.loader.dialog.exit=Exit
 config.loader.dialog.skip=Skip
 
@@ -531,6 +531,7 @@ about_dialog.your_system.title=Your System
 addressEditor.parse_error=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Range
 
+apps.dir=App Data
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
@@ -918,7 +919,7 @@ friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
 folders_tab.no_folders_available=No folders available
-folders_tab.auto_accept.text=Auto accept
+folders_tab.auto_accept.text=Auto accept new
 folders_tab.auto_accept.tip=Automatically accept invitations to new folders.
 
 friends_panel.connected=Connected
