Process new folder candidates, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1131,6 +1131,9 @@ network_statistics_panel.public_folders_size=Total size of all available files
 network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network.statistics.title=Network Statistics
 
+new_folder_candidate_notice.title=New directory found
+new_folder_candidate_notice.text=A new directory has been found: {0} 
+
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 notification_handler.display.text=Display
 notification_handler.ignore.text=Ignore
