Begin LoadCandidatePanel, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1627,6 +1627,8 @@ wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
 wizard.login_online_storage.logging_in=Logging in...
 wizard.login_online_storage.logging_in.text=Please wait while logging in.
 
+wizard.load_candidate.select_file=Configure folder candidate
+
 wizard.multi_file_restore_panel.title=File restore
 wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
