Work on LoadCandidatePanel, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1558,6 +1558,9 @@ warning_notice.mass_deletion=Mass deletion detected
 
 winutils.shortcut.description=This shortcut was placed here by {APPNAME}
 
+wizard.load_candidate.total_directory_size=Total size: {0} Files: {1}
+wizard.load_candidate.calculating_directory_size=Calculating size...
+
 wizard.basic_setup.computer_name=Name of this computer
 wizard.basic_setup.default_folder_name=Sync Folder
 wizard.basic_setup.language_restart=Language (requires restart)
