Never ask cb cb, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1278,6 +1278,7 @@ preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
+preferences.dialog.show_candidate_folders=Show new folder candidates
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
 preferences.dialog.silent_throttle=Pause bandwidth throttle
 preferences.dialog.online_storage.text=Use cloud space
