Send invite cb, fixes #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1562,6 +1562,7 @@ winutils.shortcut.description=This shortcut was placed here by {APPNAME}
 wizard.load_candidate.total_directory_size=Total size: {0} Files: {1}
 wizard.load_candidate.calculating_directory_size=Calculating size...
 wizard.load_candidate.backup_by_online_storage=Backup online
+wizard.load_candidate.send_invitation=Send invitation
 
 wizard.basic_setup.computer_name=Name of this computer
 wizard.basic_setup.default_folder_name=Sync Folder
