--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -787,6 +787,8 @@ filename_problem.reserved_filename.soln_desc=Rename the file
 filename_problem.too_long=The file name is too long - {0}
 filename_problem.too_long.soln_desc=Rename the file
 
+file_conflict_problem.description=Conflict detected on file {0}
+
 files_stats_panel.local_label=Local: {0}
 files_stats_panel.incoming_label=Incoming: {0}
 files_stats_panel.deleted_label=Deleted: {0}
