Resolve unsynced files, fixes #2238

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -834,6 +834,7 @@ folder_create.os_error.text=Unable to setup the cloud to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
 
 folder_problem.unsynchronized=Folder {0} has not been in sync for {1} day(s).
+folder_problem.unsynchronized.soln_desc=Synchronize folder
 folder_problem.device_disconnected=Unable to access device. Currently not available.
 folder_problem.table_model.date=Date
 folder_problem.table_model.description=Description
