Clarifying 'KB/s' in Network Preferences, refs #2165

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -969,6 +969,7 @@ general.ok.key=O
 general.ok=OK
 general.help.key=H
 general.help=Help
+general.kbPerS=KB/s
 general.preview_folder=Preview folder
 general.proxy_settings=Proxy settings
 general.saturday=Saturday
