--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -416,7 +416,7 @@ pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo yo
 pro.security.possiblebreach=Possible security breach
 pro.security.secure=secure
 pro.security.securitysettings=Security Settings
-pro.wizard.activation.activating=Activating {APPNAME} Pro
+pro.wizard.activation.activating=Activating
 pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 pro.wizard.activation.signup_account=Sign up for an account now
 pro.wizard.activation.choose_key_file=Choose License key file
