Partial fix of multi directory select, refs #2244

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1306,6 +1306,7 @@ dialog.directorychooser.new.description=New directory
 dialog.directorychooser.new.exists=This directory already exists\n\n{0}
 dialog.directorychooser.new.problem=There was a problem creating the directory\n\n{0}
 dialog.directorychooser.use_classic=Classic Browser
+dialog.directorychooser.hold_control=Hold down Ctrl key to select multiple directories.
 dialog.directorychooser.error=Error. Please use classic browser.
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
