Notices have never show CBs, fixes #2276

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1141,6 +1141,9 @@ new_folder_candidate_notice.title=New directory found
 new_folder_candidate_notice.text=A new directory has been found: {0} 
 
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
+notification_form.never_show_chat_notifications=Never show chat notifications
+notification_form.never_show_system_notifications=Never show system notifications
+
 notification_handler.display.text=Display
 notification_handler.ignore.text=Ignore
 
