Create desktop shortcut of PowerFolders, fixes #2239

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -933,6 +933,7 @@ friends_panel.n_a=n/a
 friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name={APPNAME}
+general.powerfolders.name=PowerFolders
 general.local_archive_mode=File archive (local)
 general.online_archive_mode=File archive (online)
 general.accept=Accept
@@ -1202,6 +1203,7 @@ preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
+preferences.dialog.dialogs.create_powerfolders_shotrcut=Create PowerFolders desktop shortcut 
 preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync.tooltip=Sync only the changes in files
