Limit estimated sync date to 2 days, fixes #2283

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -737,6 +737,7 @@ exp_folder_view.not_yet_scanned=Not yet scanned
 exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last sync: {0}
 exp_folder_view.estimated_synchronized=Estimated sync: {0}
+exp_folder_view.estimated_unknown=Estimated sync: Unknown
 
 file_details_panel.availability=Availability
 file_details_panel.available=Available
