Folders connecting / login text, fixes #2284

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -924,9 +924,13 @@ friend_search.node_table.on_local_network=LAN
 friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
-folders_tab.no_folders_available=No folders available
 folders_tab.auto_accept.text=Auto accept new
 folders_tab.auto_accept.tip=Automatically accept invitations to new folders.
+folders_tab.connecting=Connecting...
+folders_tab.not_logged_in=Not logged in
+folders_tab.login=(Login)
+folders_tab.no_folders_found=No folders found
+folders_tab.new_folder=(New folder)
 
 friends_panel.connected=Connected
 friends_panel.currently_online=Currently online
