Beginnings of webdav, refs #2297

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -327,6 +327,10 @@ action_view_notices.description=View any notices
 action_view_notices.key=N
 action_view_notices.name=Notices
 
+action_webdav.description=Create a WebDAV connection
+action_webdav.key=W
+action_webdav.name=WebDAV
+
 pro.action_open_license_file.description=Opens a license key file from disk
 pro.action_open_license_file.key=O
 pro.action_open_license_file.name=Open license file
