--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -57,6 +57,8 @@ action_single_file_transfer.icon=de/dal33t/powerfolder/skin/lightsky/icons/Arrow
 action_single_file_transfer_accept.icon=de/dal33t/powerfolder/skin/lightsky/icons/Checked.png
 action_resolve_problem.icon=de/dal33t/powerfolder/skin/lightsky/icons/Advanced.png
 action_sync_folder.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync00.png
+action_webdav.icon=de/dal33t/powerfolder/skin/lightsky/icons/webdav.png
+
 pac_00.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac00.png
 pac_01.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac01.png
 pac_02.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac02.png
