--- a/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
@@ -51,6 +51,7 @@ action_search_invitee.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/FindCompu
 action_single_file_transfer.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/ArrowRight.png
 action_single_file_transfer_accept.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Checked.png
 action_resolve_problem.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Advanced.png
+action_webdav.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/webdav.png
 
 # general icons
 
