--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
@@ -54,6 +54,7 @@ action_single_file_transfer.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/A
 action_single_file_transfer_accept.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Checked.png
 action_resolve_problem.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Advanced.png
 action_sync_folder.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sync00.png
+action_webdav.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/webdav.png
 
 # general icons
 
