--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -60,6 +60,7 @@ action_single_file_transfer.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/A
 action_single_file_transfer_accept.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Checked.png
 action_resolve_problem.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Advanced.png
 action_sync_folder.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync00.png
+action_webdav.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/webdav.png
 
 # general icons
 
