Webdav of folders, fixes #2297

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -742,6 +742,12 @@ exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last sync: {0}
 exp_folder_view.estimated_synchronized=Estimated sync: {0}
 exp_folder_view.estimated_unknown=Estimated sync: Unknown
+exp_folder_view.webdav_title=WebDAV
+exp_folder_view.webdav_working_text=Creating WebDAV drive mapping
+exp_folder_view.webdav_success_title=Success
+exp_folder_view.webdav_success_text=The WebDAV drive mapping succeeded with the following message:\n\n{0}
+exp_folder_view.webdav_failure_title=Failure
+exp_folder_view.webdav_failure_text=The WebDAV drive mapping failed with the following message:\n\n{0}
 
 file_details_panel.availability=Availability
 file_details_panel.available=Available
