Wait until joined folder, fixes #2297

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -327,9 +327,9 @@ action_view_notices.description=View any notices
 action_view_notices.key=N
 action_view_notices.name=Notices
 
-action_webdav.description=Create a WebDAV connection
-action_webdav.key=W
-action_webdav.name=WebDAV
+action_webdav.description=Mount as drive
+action_webdav.key=M
+action_webdav.name=Mount
 
 pro.action_open_license_file.description=Opens a license key file from disk
 pro.action_open_license_file.key=O
@@ -743,7 +743,7 @@ exp_folder_view.last_synchronized=Last sync: {0}
 exp_folder_view.estimated_synchronized=Estimated sync: {0}
 exp_folder_view.estimated_unknown=Estimated sync: Unknown
 exp_folder_view.webdav_title=WebDAV
-exp_folder_view.webdav_working_text=Creating WebDAV drive mapping
+exp_folder_view.webdav_working_text=Mount as WebDAV drive
 exp_folder_view.webdav_success_title=Success
 exp_folder_view.webdav_success_text=The WebDAV drive mapping succeeded with the following message:\n\n{0}
 exp_folder_view.webdav_failure_title=Failure
