--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1500,6 +1500,11 @@ systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.in_sync=in sync
 systray.tooltip.syncing=syncing
+systray.tooltip.not_connected=not connected
+systray.tooltip.not_logged_in=not logged in
+systray.tooltip.new_problem=New problem
+systray.tooltip.new_notice=New notice
+systray.tooltip.new_chat_message=New chat message
 systray.tooltip.up.mb=Up {0} MBs
 systray.tooltip.up=Up {0} KBs
 
