Integrate exclude button in up/download menues, refs #2303

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -40,7 +40,7 @@ action_add_friend.key=A
 action_add_friend.name=Add
 
 action_add_ignore.description=Exclude files from sync
-action_add_ignore.key=A
+action_add_ignore.key=E
 action_add_ignore.name=Exclude
 
 action_add_invitee.description=Add invitee
@@ -1508,7 +1508,7 @@ systray.tooltip.new_chat_message=New chat message
 systray.tooltip.up.mb=Up {0} MBs
 systray.tooltip.up=Up {0} KBs
 
-transfer.problem.broken.download=The transfer download was broken
+transfer.problem.broken.download=Tclhe transfer download was broken
 transfer.problem.broken.upload=The transfer upload was broken
 transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 transfer.problem.general.exception=There was an Exception\: {0}
