Auto speed dropdown entry, refs #2365

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1091,6 +1091,7 @@ line_speed.adsl512=Cable / DSL 6000
 line_speed.adsl768=Cable / DSL 16000
 line_speed.adsl1024=Cable / DSL 20000
 line_speed.adsl1536=Cable / DSL 30000
+line_speed.auto_speed=Automatic
 line_speed.custom_speed=Custom line
 line_speed.download_speed=Download
 line_speed.lan1000=LAN 1000mbit/s
