--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1213,9 +1213,9 @@ plugin_settings.description=Configure this plugin now
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports {APPNAME} should listen for connections on
 preferences.dialog.advPort=Port
 preferences.dialog.advanced.title=Advanced
-preferences.dialog.archive_cleanup=Archive cleanup
+preferences.dialog.archive_cleanup=Cleanup
 preferences.dialog.archive_cleanup_day=1 day
-preferences.dialog.archive_cleanup_week=1 day
+preferences.dialog.archive_cleanup_week=1 week
 preferences.dialog.archive_cleanup_month=1 month
 preferences.dialog.archive_cleanup_year=1 year
 preferences.dialog.archive_cleanup_never=never
