Cleanup button, fixes #2319

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -71,6 +71,10 @@ action_cleanup_notices.description=Clear the list of notices
 action_cleanup_notices.key=C
 action_cleanup_notices.name=Cleanup
 
+action_cleanup_archive.description=Delete any old archive files now
+action_cleanup_archive.key=C
+action_cleanup_archive.name=Cleanup
+
 action_clear_completed_downloads.description=Clear the list of the recently completed downloads
 action_clear_completed_downloads.key=C
 action_clear_completed_downloads.name=Cleanup
