--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1228,7 +1228,6 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
-preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.dialogs.create_powerfolders_shotrcut=Create PowerFolders desktop shortcut 
 preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.delta_sync=Delta sync
@@ -1339,10 +1338,10 @@ dialog.directorychooser.new.problem=There was a problem creating the directory\n
 dialog.directorychooser.use_classic=Classic Browser
 dialog.directorychooser.hold_control=Hold down Ctrl key to select multiple directories.
 dialog.directorychooser.error=Error. Please use classic browser.
-preferences.dialog.translucent_frame=Make main frame translucent
+preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
 preferences.dialog.ui_locked=Lock on start up
-preferences.dialog.main_on_top=Main frame stays on top of other windows
+preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.auto_expand=Auto expand Folders and Computers
 preferences.dialog.translucent_text=Translucency
 preferences.dialog.ui.title=User Interface
