Work on folder buttons, refs #2328

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -99,6 +99,10 @@ action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
 action_delete_transfer_mode.name=Delete
 
+action_folder_wizard.description=Open the Folder Wizard
+action_folder_wizard.key=W
+action_folder_wizard.name=Wizard
+
 action_backup_online_storage.description=Backup this folder to cloud space
 action_backup_online_storage.key=B
 action_backup_online_storage.name=Start online backup
@@ -945,6 +949,7 @@ folders_tab.not_logged_in=Not logged in
 folders_tab.login=(Login)
 folders_tab.no_folders_found=No folders found
 folders_tab.new_folder=(New folder)
+folders_tab.folder_wizard=(Wizard)
 
 friends_panel.connected=Connected
 friends_panel.currently_online=Currently online
