--- a/.classpath
+++ b/.classpath
@@ -39,11 +39,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/synthetica/syntheticaSilverMoon.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/synthetica/syntheticaSkyMetallic.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/synthetica/syntheticaWhiteVision.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-annotations.jar"/>
 	<classpathentry kind="lib" path="lib/ejb3-persistence.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate3-strip.jar"/>
 	<classpathentry kind="lib" path="src/distribution/PowerFolderBasic"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3-stripped.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
