--- a/build.xml
+++ b/build.xml
@@ -100,11 +100,10 @@ For creation of the installer:
 			<!--<include name="h2-1.1.109.jar" />-->
 			<include name="jcalendar.jar" />
 			<include name="ejb3-persistence.jar" />
-			<include name="hibernate-annotations.jar" />
-      <include name="hibernate3-strip.jar" />
+      		<include name="hibernate3-stripped.jar" />
 
-      <include name="jfreechart/jfreechart-1.0.13.jar" />
-      <include name="jfreechart/jcommon-1.0.16.jar" />
+      		<include name="jfreechart/jfreechart-1.0.13.jar" />
+      		<include name="jfreechart/jcommon-1.0.16.jar" />
 
 			<include name="synthetica/commons-logging-1.1.jar" />
 			<include name="synthetica/flexdock.jar" />
