Auto create folder, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1163,8 +1163,8 @@ network_statistics_panel.public_folders_size=Total size of all available files
 network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network.statistics.title=Network Statistics
 
-new_folder_candidate_notice.title=New directory found
-new_folder_candidate_notice.text=A new directory has been found: {0} 
+folder_auto_create_notice.title=New folder created
+folder_auto_create_notice.text=A new folder has been created: {0}
 
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 notification_form.never_show_chat_notifications=Never show chat notifications
@@ -1319,7 +1319,7 @@ preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.show_candidate_folders=Show new folder candidates
+preferences.dialog.show_auto_created_folders=Show notification of autocreated folders
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
 preferences.dialog.silent_throttle=Pause bandwidth throttle
 preferences.dialog.online_storage.text=Use cloud space
