Change folder remove to remove if folder mostly empty, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1365,7 +1365,7 @@ preferences.dialog.use_zip_on_internet=on Internet
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 
-preview_folder_remove.dialog.text=Remove Folder {0}?
+preview_folder_remove.dialog.text=Remove folder {0}?
 preview_folder_remove.dialog.title=Remove Folder {0}?
 
 remove_pattern.dont=Do Not Remove
