--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1325,6 +1325,9 @@ preferences.dialog.silent_throttle=Pause bandwidth throttle
 preferences.dialog.online_storage.text=Use cloud space
 preferences.dialog.online_storage.tip=Setup {APPNAME} to use cloud space
 preferences.dialog.start_with_windows=Start {APPNAME} with Windows
+preferences.dialog.start_with_macosx.name=Start {APPNAME} on Mac logon
+preferences.dialog.start_with_macosx.key=S
+preferences.dialog.start_with_macosx.description=
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources on the Internet
