--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1566,6 +1566,14 @@ local_delete_notice.remove_folder_locally=Remove folder locally
 uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
+uicontroller.sync_info.title=Sync triggered
+uicontroller.sync_info.start=Synchronization has been triggered successfully.
+uicontroller.sync_info.new={0} new
+uicontroller.sync_info.changed={0} changed
+uicontroller.sync_info.deleted={0} deleted
+uicontroller.sync_info.no_changes_detected=no changes detected
+uicontroller.sync_info.transfer=Going to transfer {0} file(s).
+
 uploads_information_card.title=Uploads
 uploads_information_card.auto_cleanup.immediate=Immediate
 uploads_information_card.auto_cleanup.never=Never
