--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -845,6 +845,7 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 folder.info_tip=Contains files and folders managed by {APPNAME}
 
 folders_list.local_folders=On this computer
+folders_list.typical_folders=Typical folders
 folders_list.online_folders=Available folders
 folders_list.collapse_hint=Collapse group
 folders_list.expand_hint=Expand group
