--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -734,6 +734,7 @@ exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} available
 exp_folder_view.folder_local_text=On this computer
 exp_folder_view.folder_online_text=Available folder
+exp_folder_view.folder_typical_text=Typical folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0} ({1} connected)
