--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -859,6 +859,7 @@ folder_problem.unsynchronized.soln_desc=Synchronize folder
 folder_problem.unsynchronized_minutes=Folder {0} has not been in sync for {1} minutes(s)
 folder_problem.unsynchronized_hours=Folder {0} has not been in sync for {1} hour(s)
 folder_problem.device_disconnected=Unable to access device. Currently not available.
+folder_problem.device_disconnected.remove_folder=Stop syncing folder.
 folder_problem.table_model.date=Date
 folder_problem.table_model.description=Description
 folder_problem.table_model.solution=Solution
